# C-FLAT-RPi3-Implementation

./: .gitignore  .gitmodules  README.md
docs/: OBSERVATIONS.md  RESULTS.md
instrumentation/llvm-pass/: CFlatPass.cpp  CMakeLists.txt
instrumentation/runtime/: libcflat.c
outputs/: DEPLOY.txt  test_loop_nested.c
presentation/: Makefile  cflat_presentation.tex
screenshots/syringe-pump/: observations.txt
scripts/: build_all.sh  build_cflat.sh
secure-world/host/: cflat_host.c  cflat_host.h
secure-world/ta/: .cflat_ta.o.cmd  .cflat_ta.o.d  .user_ta_header.o.cmd  .user_ta_header.o.d  Makefile  cflat_ta.c  cflat_ta.h  sub.mk  user_ta_header_defines.h
test-applications/embench-iot-benchmarks/: build_embench.sh  embench_wrapper.c  run_and_compare.sh
test-applications/simple/: Makefile  build_all_tests.sh  test_loop.c  test_loop_10.c  test_loop_cond.c  test_loop_mult.c  test_simple.c
test-applications/syringe/: build.sh  test_syringe.c
